--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b2m-nodeks",
+  "name": "b2m-nodejs",
   "version": "1.0.0",
   "description": "Build To Manage - Node.js example",
   "scripts": {
@@ -7,12 +7,6 @@
   },
   "dependencies": {
     "express": "4.16.4"
-  },
-  "devDependencies": {
-    "eslint": "3.19.0",
-    "eslint-config-airbnb-base": "11.2.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-promise": "3.5.0"
   },
   "license": "MIT",
   "repository": {
