--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install
 # RUN npm install --only=production
 
 # Bundle app source
-COPY server-complete.js /app
+COPY server.js /app
 
 EXPOSE 3001
-CMD [ "npm", "start", "server-complete.js" ]
+CMD [ "npm", "start", "server.js" ]
